--- a/src/TS.Framework.Logging.Tests/packages.config
+++ b/src/TS.Framework.Logging.Tests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Elasticsearch.Net" version="2.3.0" targetFramework="net452" />
   <package id="Serilog" version="1.5.14" targetFramework="net452" />
+  <package id="Serilog.Sinks.Elasticsearch" version="3.0.134" targetFramework="net452" />
   <package id="Serilog.Sinks.MSSqlServer" version="3.0.52" targetFramework="net452" />
   <package id="xunit" version="2.1.0" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
