--- a/src/Unity.Interception.Serilog.Tests/packages.config
+++ b/src/Unity.Interception.Serilog.Tests/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="Elasticsearch.Net" version="2.3.0" targetFramework="net452" />
+  <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
   <package id="Serilog" version="1.5.14" targetFramework="net452" />
   <package id="Serilog.Sinks.Elasticsearch" version="3.0.134" targetFramework="net452" />
   <package id="Serilog.Sinks.MSSqlServer" version="3.0.52" targetFramework="net452" />
+  <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="xunit" version="2.1.0" targetFramework="net452" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net452" />
   <package id="xunit.assert" version="2.1.0" targetFramework="net452" />
