--- a/src/Unity.Interception.Serilog.Tests/packages.config
+++ b/src/Unity.Interception.Serilog.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="Elasticsearch.Net" version="2.3.0" targetFramework="net452" />
+  <package id="FluentAssertions" version="4.5.0" targetFramework="net452" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
   <package id="Serilog" version="1.5.14" targetFramework="net452" />
   <package id="Serilog.Sinks.Elasticsearch" version="3.0.134" targetFramework="net452" />
