--- a/src/Unity.Interception.Serilog.Tests/Unity.Interception.Serilog.Tests.csproj
+++ b/src/Unity.Interception.Serilog.Tests/Unity.Interception.Serilog.Tests.csproj
@@ -105,6 +105,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LogTests.cs" />
+    <Compile Include="LogWithoutReturnOrParameterTypesdTests.cs" />
     <Compile Include="PoCTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Support\ContainerBuilder.cs" />
