--- a/src/Unity.Interception.Serilog.Tests/Unity.Interception.Serilog.Tests.csproj
+++ b/src/Unity.Interception.Serilog.Tests/Unity.Interception.Serilog.Tests.csproj
@@ -104,13 +104,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LogTests.cs" />
+    <Compile Include="LogMethodOnInterceptedInstanceTests.cs" />
+    <Compile Include="LogMethodOnInterceptedTypeTests.cs" />
     <Compile Include="LogWithoutReturnOrParameterTypesdTests.cs" />
     <Compile Include="PoCTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Support\ContainerBuilder.cs" />
     <Compile Include="Support\Dummy.cs" />
     <Compile Include="Support\LogEntry.cs" />
+    <Compile Include="Support\TestBase.cs" />
+    <Compile Include="TODO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
