--- a/src/Unity.Interception.Serilog.Tests/Unity.Interception.Serilog.Tests.csproj
+++ b/src/Unity.Interception.Serilog.Tests/Unity.Interception.Serilog.Tests.csproj
@@ -107,6 +107,7 @@
     <Compile Include="LogMethodOnInterceptedInstanceTests.cs" />
     <Compile Include="LogMethodOnInterceptedTypeTests.cs" />
     <Compile Include="LogWithoutReturnOrParameterTypesdTests.cs" />
+    <Compile Include="NullTests.cs" />
     <Compile Include="PoCTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Support\ContainerBuilder.cs" />
