--- a/src/Unity.Interception.Serilog.Tests/Unity.Interception.Serilog.Tests.csproj
+++ b/src/Unity.Interception.Serilog.Tests/Unity.Interception.Serilog.Tests.csproj
@@ -104,6 +104,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigurationTests.cs" />
     <Compile Include="DoNotLogIgnoredMethodsTests.cs" />
     <Compile Include="DoNotLogIgnoredArgumentsTests.cs" />
     <Compile Include="LogErrorOnInterceptedTypeTests.cs" />
@@ -115,8 +116,10 @@
     <Compile Include="PoCTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Support\ContainerBuilder.cs" />
+    <Compile Include="Support\DicExtensions.cs" />
     <Compile Include="Support\Dummy.cs" />
     <Compile Include="Support\LogEntry.cs" />
+    <Compile Include="Support\LoggerMock.cs" />
     <Compile Include="Support\TestBase.cs" />
     <Compile Include="TODO.cs" />
   </ItemGroup>
