--- a/src/Unity.Interception.Serilog.Tests/Unity.Interception.Serilog.Tests.csproj
+++ b/src/Unity.Interception.Serilog.Tests/Unity.Interception.Serilog.Tests.csproj
@@ -104,7 +104,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigurationTests.cs" />
+    <Compile Include="LogInformationFromExpectedExceptionsTests.cs" />
     <Compile Include="DoNotLogIgnoredMethodsTests.cs" />
     <Compile Include="DoNotLogIgnoredArgumentsTests.cs" />
     <Compile Include="LogErrorOnInterceptedTypeTests.cs" />
