--- a/src/Unity.Interception.Serilog.Tests/Unity.Interception.Serilog.Tests.csproj
+++ b/src/Unity.Interception.Serilog.Tests/Unity.Interception.Serilog.Tests.csproj
@@ -110,7 +110,7 @@
     <Compile Include="LogErrorOnInterceptedTypeTests.cs" />
     <Compile Include="LogInformationOnInterceptedInstanceTests.cs" />
     <Compile Include="LogInformationOnInterceptedTypeTests.cs" />
-    <Compile Include="LogsShouldBeEnrichedWithThreadId.cs" />
+    <Compile Include="LogsShouldBeEnriched.cs" />
     <Compile Include="LogWithoutReturnOrParameterTypesTests.cs" />
     <Compile Include="LogInformationAfterMultipleRegistrationsTests.cs" />
     <Compile Include="NullTests.cs" />
